--- a/src/components/layout/navbar/style.css
+++ b/src/components/layout/navbar/style.css
@@ -2,26 +2,70 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #1a1a2e;
+    background-color: #2d2d2d;
     padding: 20px 60px;
     color: white;
-}
-
+    flex-wrap: wrap;
+  }
+  
 .logo{
-    font-size: 1.8rem;
+    text-transform: uppercase;
     font-weight: bold;
+    letter-spacing: 0.1rem;
+    font-size: 1.5rem;
 }
-
-
-.nav-links {
+.nav-links{
     display: flex;
-    gap: 2rem;
-    color: white;
-    fon-size: 1rem;
-    transtion: color 0.3s ease;
+    gap: 1rem;
+    text-transform: uppercase;
+    background-color: #2d2d2d;   
+   
 }
 
-.nav-links a:hover {
-    color: #00adb5;
-}
-
+  .hamburger {
+    display: none;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-left: auto;
+    line-height: 1;
+  }
+  
+  @media (max-width: 768px) {
+    .navbar {
+      flex-direction: row; 
+      justify-content: space-between;
+      align-items: center;
+    }
+  
+    .hamburger {
+      display: flex; 
+    }
+  
+    .nav-links {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      margin-top: 10px;
+      padding: 10px 20px;          
+      z-index: 1000;               
+      border-top: 1px solid #333;  
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    }
+  
+    .nav-links.active {
+      display: flex;
+    }
+  
+    .nav-links a {
+      display: block;
+      width: 100%;
+      padding: 8px 0;
+      border-bottom: 1px solid #333;
+      gap: 2rem;
+      text-decoration: none;
+      max-height: fit-content;
+      overflow-y: auto;
+      margin: 10px auto;
+    }
+  }
+  
