--- a/src/app/about/style.css
+++ b/src/app/about/style.css
@@ -49,7 +49,22 @@
   .text-content {
     max-width: 500px;
   }
-  
+  textarea::placeholder {
+  color: white;
+  opacity: 0.8;
+}
+textarea {
+  padding: 20px 10px 10px;
+  color: white;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid white;
+  font-size: 1rem;
+  outline: none;
+  width: 100%;
+  resize: none;
+  box-sizing: border-box;
+}
   .dot {
     height: 10px;
     width: 10px;
@@ -158,3 +173,9 @@
       width: 80%;
     }
   }
+
+  @media (max-width: 768px) {
+  textarea {
+    padding: 15px 10px 10px;
+  }
+}
