--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
-@import "tailwindcss";
-
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  
+}
+html, body {
+  height: 100%;
+  overflow: hidden;
+}
