--- a/src/components/layout/navbar/style.css
+++ b/src/components/layout/navbar/style.css
@@ -18,10 +18,10 @@
     display: flex;
     gap: 1rem;
     text-transform: uppercase;
-    background-color: #2d2d2d;   
+    background-color: #2d2d2d;
+    color: white ;   
    
 }
-
   .hamburger {
     display: none;
     font-size: 1rem;
@@ -29,6 +29,7 @@
     margin-left: auto;
     line-height: 1;
   }
+  
   
   @media (max-width: 768px) {
     .navbar {
