--- a/src/components/layout/navbar/style.css
+++ b/src/components/layout/navbar/style.css
@@ -19,8 +19,17 @@
     gap: 1rem;
     text-transform: uppercase;
     background-color: #2d2d2d;
-    color: white ;   
-   
+    color: white;   
+}
+
+.nav-links a{
+  text-decoration: none;
+  color: white;
+  transition: color 0.3 ease;
+}
+
+.nav-links a:hover{
+  color:#f0c674;
 }
   .hamburger {
     display: none;
