added the github links in the portfolio card

--- a/src/app/portfolio/style.css
+++ b/src/app/portfolio/style.css
@@ -79,6 +79,8 @@
 
 /* Individual Card */
 .portfolio-card {
+  color: white;
+  text-decoration: none;
   background-color: transparent;
   max-width: 300px;
   min-width: 300px;
