contact page updated

--- a/src/app/contact/style.css
+++ b/src/app/contact/style.css
@@ -12,18 +12,19 @@
 
 .title-underline {
   width: 60px;
-  height: 3px;
+  height: 2px;
   background-color: white;
-  margin: 0 auto 40px;
+  margin: 0 auto 40px 600px;
+  text-align: left;
 }
-
 h1 {
-  font-size: 2.5rem;
-  font-weight: 700;
-  margin-bottom: 10px;
+  font-size: 80px;
+  font-weight: ;
+  margin-bottom: 0px;
   color: white;
-  text-transform: uppercase;
+  text-transform: capitalize;
   text-align: center;
+  font-weight: normal;
 }
 .email-link {
   color: white;
@@ -94,11 +95,19 @@ textarea {
   border-bottom: 2px solid white;
   padding: 12px 10px;
   font-size: 1rem;
-  background: transparent;
+  background: transparent !important;
   outline: none;
   resize: none;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  background-color: transparent !important;
+  -webkit-box-shadow: 0 0 0 1000px #1f2020 inset !important;
+  color: white !important;
+  -webkit-text-fill-color: white !important;
+}
 .submit-btn {
   margin-top: 20px;
   padding: 10px 28px;
