--- a/src/app/about/style.css
+++ b/src/app/about/style.css
@@ -1,4 +1,4 @@
-.home-container {
+.home-container-about {
   display: flex;
   width: 100%;
   height: 90vh;
@@ -12,8 +12,8 @@
   width: 50%;
 }
 
-.home-left,
-.home-right {
+.home-left-about,
+.home-right-about {
   flex: 1;
   height: 100%;
 }
@@ -22,7 +22,7 @@
   height: 100%;
 }
 
-.home-right {
+.home-right-about {
   background-color: #1f2020;
   display: flex;
   align-items: center;
@@ -39,7 +39,7 @@
   padding: 30px 0 0 20px;
 }
 
-.home-left {
+.home-left-about {
   background-color: #1f2020;
   color: white;
   display: flex;
